[package]
name = "encrypted_id"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
base64 = "^0.12.0"
byteorder = "1.3.4"
crc = "1.8.1"
rust-crypto = "0.2.36"
failure = "0.1.7"