[package]
name = "encrypted_id"
version = "0.1.5"
authors = ["AbrarNitk <abrar.nitk@gmail.com>", "Amit Upadhyay <upadhyay@gmail.com>"]
homepage = "https://www.fifthtry.com/abrar/encrypted_id/"
edition = "2018"
description = "Encryption and Decryption"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["encryption", "decryption", "encrypted_id", "decrypted_id"]
repository = "https://github.com/AbrarNitk/encrypted_id"
publish = true

[dependencies]
lazy_static = "1"
base64 = "^0.12.0"
byteorder = "1.3.4"
crc = "1.8.1"
rust-crypto = "0.2.36"
failure = "0.1.7"
