[package]
name = "encrypted_id_derive"
version = "0.1.0"
authors = ["AbrarNitk <abrar.nitk@gmail.com>"]
edition = "2018"
description = "Encryption and Decryption"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
readme = "README.md"
keywords = ["encryption", "decryption", "encrypted_id", "decrypted_id"]
repository = "https://github.com/AbrarNitk/encrypted_id"
publish = true

[lib]
proc-macro = true

[dependencies]
syn = "1.0.17"
quote = "1.0.3"
darling = "0.10.2"